doctor cards aligned correctly

--- a/static/css/home/doc_slots.css
+++ b/static/css/home/doc_slots.css
@@ -4,37 +4,34 @@
     justify-content: center;
     gap:5%;
     width: 100vw;
-    height: 100vh;
+    
 }
-.doc_slots .form .left{
+.doc_slots .form .left_sec{
     width: 50%;
-    height: 100%;
+
 }
-.doc_slots .form .left .div{
+.doc_slots .form .left_sec .div{
     width: 100%;
 
 }
-.doc_slots .form .left .div .img{
+.doc_slots .form .left_sec .div .doctor_img{
     width: 100%;    
-    height: 50%;
+    /* height: 50%; */
     object-fit: cover;
     object-position: top;
     
 }
 .doc_slots .form .right{
     width: 50%;
-    height: 90%;
+    /* height: 90%; */
 }
 
-.doc_slots .form .left .dis_list{
+.doc_slots .form .left_sec .dis_list{
     display: flex;
     flex-wrap: wrap;
-    
-    
-    
-    
+  
 }
-.doc_slots .form .left .dis_list .btn{
+.doc_slots .form .left_sec .dis_list .btn{
     margin:1%;
 }
 
